Bổ sung thư viện